# onboarding

./: .gitignore  .replit  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.ts
.claude/: settings.local.json
attached_assets/: PLANO DE SUCESSO DO CLIENTES - VENDAS_1757087241205.gform
backend/: JOBS_README.md  README_API.md  __init__.py  alembic.ini  config.py  database.py  dependencies.py  main.py  models.py  quick_test.py  saber_onboarding.db  schemas.py  test_api.py  test_google_integration.py  test_jobs.py  test_models.py
backend/alembic/: env.py
backend/jobs/: __init__.py  remind_today.py  scheduler.py  sync_agendamentos.py
backend/routers/: __init__.py  agendamentos.py  clientes.py  contatos.py  dashboard.py  integrations.py  jobs.py  visitas.py
backend/services/: __init__.py  agendamento_service.py  cliente_service.py  dashboard_service.py  google_service.py
client/: index.html  public && cp Cworkspaceonboardingrepoclientpublicescrita-logo.png Cworkspaceonboardingclientpublic  public && cp Cworkspaceonboardingrepoclientpublicfavicon.png Cworkspaceonboardingclientpublic
client/src/: App.tsx  index.css
migrations/: 0000_minor_iron_patriot.sql  0001_keen_shiver_man.sql  0002_soft_havok.sql  0003_shocking_tiger_shark.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
server/: cache.ts  db.ts  index.ts  routes.ts  seed.ts  storage.ts  vite.ts
server/audit/: logger.ts  middleware.ts
shared/: schema.ts
(+80 files in other folders)
